# budget

./: .gitignore  AGENTS.md  app.py  domain.py  orcamento.json  pyproject.toml
tests/: test_beneficios.py  test_domain.py
